# hoalu

./: .env.template  .gitignore  .oxfmtrc.json  .oxlintrc.json  ;  AGENTS.md  CLAUDE.md  Caddyfile  Dockerfile  README.md  biome.json  bun.lockb  docker-compose.yml  knip.json  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.json  turbo.json
.agent-diary/: better-auth-v1.5-upgrade.md  command-palette-virtualization-fix.md  recurring-bills-feature.md
.claude/: settings.local.json
.zed/: settings.json
agent-diary/: command-palette-virtualization-fix.md  mobile-dropdown-zindex-fix.md  select-with-search-combobox-migration.md
app/: app.config.ts  client.tsx  drizzle.config.ts  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json  tauri.prod.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
deployment/: .dockerignore  .env.template  Dockerfile  app.Dockerfile  docker-compose.dev.yml  docker-compose.yml
deployments/: .dockerignore  .env.template  MINIO_SETUP.md  Makefile  api.Dockerfile  app.Dockerfile  base.Dockerfile  docker-compose.apps.yml  docker-compose.infra.yml  docker-compose.local.yml  docker-compose.platform.yml  docker-compose.yml  migration.Dockerfile  server.Dockerfile  web.Dockerfile
docs/: effect-frontend-integration-plan.md  effect-migration-status.md  effect-ts-migration-plan.md  improve-tanstack-db.md
drizzle/: 0000_thankful_forgotten_one.sql
scripts/: dev.ts
(+750 files in other folders)
